directly parse GPX file instead of CSV
It simplify my workflow for making a map by removing the CSV step.

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ url = http://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png
 bbox = -1.81549072265625,47.002733906678834,-0.1812744140625,47.67001142887409
 zoomlevel = 14
 imagepath = ./build/image.png
-csv = ./build/data.csv
+gpx = ./build/export.gpx
 width = 0.286
 smoothing = 6
 N = 20
